# design-principles-and-patterns-exercises

./: cart.json  cart_old.xml  exercise_1.py  exercise_2.py  exercise_3.py  pyproject.toml  test.py
