[project]
authors = [{name = "Claudius Haag", email = "claudius.haag@mib.uni-stuttgart.de"}]
dependencies = []
description = "Add a short description here"
name = "design-principles-and-patterns-exercises"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
design_principles_and_patterns_exercises = { path = ".", editable = true }

[tool.pixi.tasks]
